--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,16 +35,27 @@
       ]
     },
     {
+      "name": "Eval Classifier",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/scripts/eval_classifier_accuracy.py",
+      "console": "integratedTerminal",
+      "justMyCode": true,
+      "env": {"PYTHONPATH": "${workspaceFolder}/compute_canada/gdg/bin/python3.8"},
+      "args": [
+        "--dataset", "/tmp/data/imagenet",
+        "--use_fp16", "True"
+        ]
+    },
+    
+    {
       "name": "DP Sampling",
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/scripts/DP_sample.py",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "env": {
-        "CONDA_ENV_PATH": "${env:CONDA_PREFIX}"
-      },
-      "envFile": "${workspaceFolder}/.env",
+      "env": {"PYTHONPATH": "${workspaceFolder}/compute_canada/gdg/bin/python3.8"},
       "args": [
        "--timestep_respacing", "250",
         "--attention_resolutions", "32,16,8",
